--- a/NoZero.ipynb
+++ b/NoZero.ipynb
@@ -6595,7 +6595,7 @@
     "\n",
     "display(summary_df.head(30))\n",
     "print(f\"Fichiers nettoyés écrits dans: {CLEAN_DIR}\")\n",
-    "print(f\"Résumé: {summary_path}\")\n"
+    "print(f\"Résumé: {summary_path}\")"
    ]
   }
  ],
