amputation des variables avec 0

--- a/Analyse_exploratoireD.ipynb
+++ b/Analyse_exploratoireD.ipynb
@@ -4273,7 +4273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "e809fa97",
    "metadata": {},
    "outputs": [
@@ -4310,21 +4310,31 @@
    ],
    "source": [
     "#les variables à amputer \n",
-    "var_amput = [\n",
-    "    \"tair_tc2\",\"sw_up\", \"sw_back\"\n",
-    "]\n",
-    "for col in var_amput:\n",
-    "    #calcul de la moyenne sans 0 et NaN\n",
-    "    moyenne = c_raw.loc[c_raw[col] != 0, col].mean()\n",
-    "    #Remplacer les 0 ET NaN par la moyenne\n",
-    "    c_raw[col].replace(0, np.nan, inplace= True)\n",
-    "    c_raw[col].replace(0, np.nan, inplace= True)\n",
     "\n",
-    "print(\"résultat\")\n",
+    "var_amput = [\"tair_tc2\", \"sw_up\", \"sw_back\"]\n",
+    "\n",
+    "for col in var_amput:\n",
+    "    # Calcul de la moyenne sans les 0 ni les NaN\n",
+    "    moyenne = c_raw.loc[c_raw[col] != 0, col].mean()\n",
+    "    # si on a des valeurs non valide ce code peut nous aider\n",
+    "    #if np.isnan(moyenne):\n",
+    "        #print(f\"Pas de moyenne calculable pour {col} (aucune valeur valide).\")\n",
+    "        #continue \n",
+    "\n",
+    "    # Remplacer les 0 par NaN\n",
+    "    c_raw[col].replace(0, np.nan, inplace=True)\n",
+    "    # Remplacer les NaN par la moyenne\n",
+    "    c_raw[col].fillna(moyenne, inplace=True)\n",
+    "\n",
+    "    print(f\"Amputation réussie pour {col} : moyenne = {moyenne:.2f}\")\n",
+    "\n",
+    "# Vérification finale\n",
+    "print(\"Résultat :\")\n",
     "for col in var_amput:\n",
     "    zeros = (c_raw[col] == 0).sum()\n",
     "    nans = c_raw[col].isna().sum()\n",
     "    print(f\"{col} : 0 restants : {zeros} et NaN restants : {nans}\")\n",
+    "\n",
     "\n",
     "\n",
     "\n"
