Correction du fichier, wdir retiré ainsi que commentaires

--- a/NoZero.ipynb
+++ b/NoZero.ipynb
@@ -126,7 +126,6 @@
     "    return pd.to_datetime(s, errors=\"coerce\", dayfirst=True)\n",
     "\n",
     "\n",
-    "\n",
     "def assign_mslot_from_filename_winter(file_name: str) -> str:\n",
     "    \"\"\"\n",
     "    Détermine le M_slot (M1..M4) à partir du nom du fichier (hiver uniquement).\n",
@@ -272,9 +271,6 @@
     }
    ],
    "source": [
-    "\n",
-    "# Fonctions auxiliaires\n",
-    "\n",
     "def read_any(p: Path) -> pd.DataFrame:\n",
     "    \"\"\"Lit un fichier CSV ou Excel avec tentative sur plusieurs séparateurs.\"\"\"\n",
     "    if p.suffix.lower() in (\".xlsx\", \".xls\"):\n",
@@ -370,11 +366,11 @@
    "source": [
     "### Résultat  \n",
     "\n",
-    "Les données couvrent une longue période d’observation, du **12 mars 2024 au 1er septembre 2025**, sur les trois parcours : **Antigone**, **Boulevards** et **Écusson**.  \n",
+    "Les données couvrent une longue période d’observation, du 12 mars 2024 au 1er septembre 2025, sur les trois parcours : Antigone, Boulevards et Écusson.  \n",
     "\n",
-    "Chaque parcours contient des mesures réparties sur les **quatre créneaux horaires (M1 à M4)**.  \n",
-    "La quantité de données est globalement équilibrée entre les créneaux, avec toutefois **moins de mesures à M4**, en particulier pour **Écusson**.  \n",
-    "Cela peut s’expliquer par des **passages moins fréquents en soirée**, des **conditions météorologiques défavorables** ou encore **des problèmes techniques lors de la collecte**.  "
+    "Chaque parcours contient des mesures réparties sur les quatre créneaux horaires (M1 à M4).  \n",
+    "La quantité de données est globalement équilibrée entre les créneaux, avec toutefois moins de mesures à M4, en particulier pour Écusson.  \n",
+    "Cela peut s’expliquer par des passages moins fréquents en soirée**, des conditions météorologiques défavorables ou encore des problèmes techniques lors de la collecte.  "
    ]
   },
   {
@@ -384,14 +380,14 @@
    "source": [
     "### Analyse du pourcentage de valeurs nulles (égales à zéro) par variable numérique  \n",
     "\n",
-    "Cela nous permet d’identifier les variables contenant une proportion importante de valeurs **égales à zéro**.  \n",
-    "L’objectif est de repérer les **capteurs défectueux** ou les **données anormales** susceptibles de fausser les analyses.  \n",
+    "Cela nous permet d’identifier les variables contenant une proportion importante de valeurs égales à zéro.  \n",
+    "L’objectif est de repérer les capteurs défectueux ou les données anormales susceptibles de fausser les analyses.  \n",
     "Les variables sont ensuite triées par ordre décroissant selon leur pourcentage de zéros pour faciliter la détection des problèmes.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 216,
    "id": "fef4c819",
    "metadata": {},
    "outputs": [
@@ -428,14 +424,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>sw_down</th>\n",
-       "      <td>76.150</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sw_left</th>\n",
-       "      <td>49.381</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>sw_up</th>\n",
        "      <td>26.007</td>\n",
        "    </tr>\n",
@@ -460,23 +448,19 @@
        "      <td>0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>sw_front</th>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>section_id</th>\n",
        "      <td>0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>lw_down</th>\n",
+       "      <th>rh_thermohygro</th>\n",
        "      <td>0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>lw_front</th>\n",
+       "      <th>tmrt</th>\n",
        "      <td>0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>lw_back</th>\n",
+       "      <th>lw_right</th>\n",
        "      <td>0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -484,7 +468,19 @@
        "      <td>0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>lw_right</th>\n",
+       "      <th>lw_back</th>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lw_front</th>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lw_down</th>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lw_up</th>\n",
        "      <td>0.000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -492,22 +488,22 @@
        "</div>"
       ],
       "text/plain": [
-       "            pct_zero\n",
-       "sw_down       76.150\n",
-       "sw_left       49.381\n",
-       "sw_up         26.007\n",
-       "ws             4.107\n",
-       "sw_back        1.172\n",
-       "tair_tc2       0.589\n",
-       "wdir           0.545\n",
-       "sw_right       0.000\n",
-       "sw_front       0.000\n",
-       "section_id     0.000\n",
-       "lw_down        0.000\n",
-       "lw_front       0.000\n",
-       "lw_back        0.000\n",
-       "lw_left        0.000\n",
-       "lw_right       0.000"
+       "                pct_zero\n",
+       "sw_up             26.007\n",
+       "ws                 4.107\n",
+       "sw_back            1.172\n",
+       "tair_tc2           0.589\n",
+       "wdir               0.545\n",
+       "sw_right           0.000\n",
+       "section_id         0.000\n",
+       "rh_thermohygro     0.000\n",
+       "tmrt               0.000\n",
+       "lw_right           0.000\n",
+       "lw_left            0.000\n",
+       "lw_back            0.000\n",
+       "lw_front           0.000\n",
+       "lw_down            0.000\n",
+       "lw_up              0.000"
       ]
      },
      "metadata": {},
@@ -516,7 +512,6 @@
    ],
    "source": [
     "# Vérification du pourcentage de zéros par variable numérique\n",
-    "\n",
     "numerical_cols = raw.select_dtypes(include=np.number).columns.tolist()\n",
     "zero_percentages_global = {}\n",
     "\n",
@@ -544,13 +539,13 @@
    "source": [
     "### Résultat  \n",
     "\n",
-    "L’analyse montre que certaines variables présentent un **taux élevé de valeurs nulles (égales à zéro)**.  \n",
+    "L’analyse montre que certaines variables présentent un taux élevé de valeurs nulles (égales à zéro).  \n",
     "Notamment :  \n",
-    "- **sw_down (76.15%)**, **sw_left (49.38%)** et **sw_up (26.01%)** affichent de fortes proportions de zéros, ce qui peut indiquer des **capteurs défaillants** ou **non activés** sur certaines périodes.  \n",
-    "- Les autres variables, comme **ws (4.11%)** ou **wdir (0.55%)**, présentent un faible taux de zéros, donc peu préoccupant.  \n",
-    "- La majorité des autres mesures sont **complètes (0%)**, ce qui confirme une bonne qualité globale des données.  \n",
+    "- sw_down (76.15%), sw_left (49.38%) et sw_up (26.01%) affichent de fortes proportions de zéros, ce qui peut indiquer des capteurs défaillants ou non activés sur certaines périodes.  \n",
+    "- Les autres variables, comme ws (4.11%) ou wdir (0.55%), présentent un faible taux de zéros, donc peu préoccupant.  \n",
+    "- La majorité des autres mesures sont complètes (0%), ce qui confirme une bonne qualité globale des données.  \n",
     "\n",
-    "Ces résultats permettent de cibler les **capteurs problématiques** à corriger ou à exclure lors de l’analyse suivante.  "
+    "Ces résultats permettent de cibler les capteurs problématiques à corriger ou à exclure lors de l’analyse suivante.  "
    ]
   },
   {
@@ -910,7 +905,6 @@
    ],
    "source": [
     "#  Pourcentage de valeurs égales à 0 par parcours \n",
-    "\n",
     "results = []\n",
     "\n",
     "for track_id, df_track in raw.groupby(\"track_id\"):\n",
@@ -1597,7 +1591,7 @@
    "outputs": [],
    "source": [
     "# Variables à traiter uniquement\n",
-    "VARS_TO_IMPUTE = (\"sw_up\",\"sw_back\",\"tair_tc2\",\"ws\",\"sw_right\",\"wdir\")\n",
+    "VARS_TO_IMPUTE = (\"sw_up\",\"sw_back\",\"tair_tc2\",\"ws\",\"sw_right\")\n",
     "MAX_RUN = 30\n",
     "\n",
     "def _replace_zero_runs_with_endpoints_mean(s: pd.Series, max_run: int = 30) -> pd.Series:\n",
@@ -1621,8 +1615,8 @@
     "        return x\n",
     "\n",
     "    # détecter starts/ends de runs True dans mask\n",
-    "    # start: position True avec précédent False (ou début)\n",
-    "    # end  : position True avec suivant False (ou fin)\n",
+    "    # start: position True avec précédent False \n",
+    "    # end  : position True avec suivant False\n",
     "    prev = np.pad(mask[:-1], (1,0), constant_values=False)\n",
     "    next_ = np.pad(mask[1:],  (0,1), constant_values=False)\n",
     "    starts = np.where(mask & ~prev)[0]\n",
@@ -1639,7 +1633,6 @@
     "            else:\n",
     "                v[i0:i1+1] = np.nan\n",
     "        else:\n",
-    "            # trop long, ou bord du fichier, ou extrémité manquante/non numérique\n",
     "            v[i0:i1+1] = np.nan\n",
     "\n",
     "    return pd.Series(v, index=x.index)"
@@ -2184,7 +2177,7 @@
     "\n",
     "display(summary_df.head(20))\n",
     "\n",
-    "# 🔍Vue d'ensemble par variable\n",
+    "# Vue d'ensemble par variable\n",
     "print(\"Résumé global des imputations par variable :\")\n",
     "print(summary_df.groupby(\"variable\")[[\"n_runs_replaced\", \"n_runs_nan\", \"n_points_replaced\", \"n_points_nan\"]].sum())"
    ]
@@ -2217,17 +2210,16 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "\n",
     "file_to_check = \"picopatt_montpellier_antigone_20241210_0841.csv\"  # nom du fichier à tester\n",
     "var_to_check = \"sw_up\"  # variable à afficher\n",
     "n_points = 500  # nombre de points à afficher (pour zoomer sur un extrait)\n",
     "\n",
     "\n",
-    "# 🔹 Chargement avant/après nettoyage\n",
+    "# Chargement avant/après nettoyage\n",
     "df_raw_check = raw.loc[raw[\"__source_file\"] == file_to_check].copy()\n",
     "df_clean_check = pd.read_csv(CLEAN_DIR / file_to_check)\n",
     "\n",
-    "# 🔹 Vérifications de base\n",
+    "# Vérifications de base\n",
     "if var_to_check not in df_raw_check.columns:\n",
     "    print(f\" Variable {var_to_check} absente du fichier brut.\")\n",
     "elif var_to_check not in df_clean_check.columns:\n",
