Modification de la fonction load_all

--- a/NoZero.ipynb
+++ b/NoZero.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c4ca3d9d",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "68fcf180",
    "metadata": {},
    "outputs": [
@@ -62,79 +62,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "picopatt_montpellier_antigone_20241029_0835.csv    ->  2024-10-29  M1\n",
-      "picopatt_montpellier_antigone_20241029_1127.csv    ->  2024-10-29  M2\n",
-      "picopatt_montpellier_antigone_20241029_1423.csv    ->  2024-10-29  M3\n",
-      "picopatt_montpellier_antigone_20241029_1722.csv    ->  2024-10-29  M4\n",
-      "picopatt_montpellier_antigone_20241107_0831.csv    ->  2024-11-07  M1\n",
-      "picopatt_montpellier_antigone_20241107_1122.csv    ->  2024-11-07  M2\n",
-      "picopatt_montpellier_antigone_20241107_1429.csv    ->  2024-11-07  M3\n",
-      "picopatt_montpellier_antigone_20241107_1727.csv    ->  2024-11-07  M4\n",
-      "picopatt_montpellier_antigone_20241119_0847.csv    ->  2024-11-19  M1\n",
-      "picopatt_montpellier_antigone_20241119_1127.csv    ->  2024-11-19  M2\n",
-      "picopatt_montpellier_antigone_20241119_1421.csv    ->  2024-11-19  M3\n",
-      "picopatt_montpellier_antigone_20241119_1724.csv    ->  2024-11-19  M4\n",
-      "picopatt_montpellier_antigone_20241128_0836.csv    ->  2024-11-28  M1\n",
-      "picopatt_montpellier_antigone_20241128_1124.csv    ->  2024-11-28  M2\n",
-      "picopatt_montpellier_antigone_20241128_1429.csv    ->  2024-11-28  M3\n",
-      "picopatt_montpellier_antigone_20241128_1728.csv    ->  2024-11-28  M4\n",
-      "picopatt_montpellier_antigone_20241206_1443.csv    ->  2024-12-06  M3\n",
-      "picopatt_montpellier_antigone_20241210_0841.csv    ->  2024-12-10  M1\n",
-      "picopatt_montpellier_antigone_20241210_1130.csv    ->  2024-12-10  M2\n",
-      "picopatt_montpellier_antigone_20241210_1427.csv    ->  2024-12-10  M3\n",
-      "picopatt_montpellier_antigone_20241210_1729.csv    ->  2024-12-10  M4\n",
-      "picopatt_montpellier_antigone_20241219_0834.csv    ->  2024-12-19  M1\n",
-      "picopatt_montpellier_antigone_20241219_1124.csv    ->  2024-12-19  M2\n",
-      "picopatt_montpellier_antigone_20241219_1428.csv    ->  2024-12-19  M3\n",
-      "picopatt_montpellier_antigone_20241219_1724.csv    ->  2024-12-19  M4\n",
-      "picopatt_montpellier_antigone_20250109_0831.csv    ->  2025-01-09  M1\n",
-      "picopatt_montpellier_antigone_20250109_1123.csv    ->  2025-01-09  M2\n",
-      "picopatt_montpellier_antigone_20250109_1429.csv    ->  2025-01-09  M3\n",
-      "picopatt_montpellier_antigone_20250109_1726.csv    ->  2025-01-09  M4\n",
-      "picopatt_montpellier_boulevards_20241114_0828.csv  ->  2024-11-14  M1\n",
-      "picopatt_montpellier_boulevards_20241114_1121.csv  ->  2024-11-14  M2\n",
-      "picopatt_montpellier_boulevards_20241114_1429.csv  ->  2024-11-14  M3\n",
-      "picopatt_montpellier_boulevards_20241114_1728.csv  ->  2024-11-14  M4\n",
-      "picopatt_montpellier_boulevards_20241126_0822.csv  ->  2024-11-26  M1\n",
-      "picopatt_montpellier_boulevards_20241126_1127.csv  ->  2024-11-26  M2\n",
-      "picopatt_montpellier_boulevards_20241126_1423.csv  ->  2024-11-26  M3\n",
-      "picopatt_montpellier_boulevards_20241126_1726.csv  ->  2024-11-26  M4\n",
-      "picopatt_montpellier_boulevards_20241205_0822.csv  ->  2024-12-05  M1\n",
-      "picopatt_montpellier_boulevards_20241205_1124.csv  ->  2024-12-05  M2\n",
-      "picopatt_montpellier_boulevards_20241205_1430.csv  ->  2024-12-05  M3\n",
-      "picopatt_montpellier_boulevards_20241205_1729.csv  ->  2024-12-05  M4\n",
-      "picopatt_montpellier_boulevards_20241206_1132.csv  ->  2024-12-06  M2\n",
-      "picopatt_montpellier_boulevards_20241217_0827.csv  ->  2024-12-17  M1\n",
-      "picopatt_montpellier_boulevards_20241217_1128.csv  ->  2024-12-17  M2\n",
-      "picopatt_montpellier_boulevards_20241217_1726.csv  ->  2024-12-17  M4\n",
-      "picopatt_montpellier_boulevards_20250107_1126.csv  ->  2025-01-07  M2\n",
-      "picopatt_montpellier_boulevards_20250107_1424.csv  ->  2025-01-07  M3\n",
-      "picopatt_montpellier_boulevards_20250107_1727.csv  ->  2025-01-07  M4\n",
-      "picopatt_montpellier_boulevards_20250116_0834.csv  ->  2025-01-16  M1\n",
-      "picopatt_montpellier_boulevards_20250116_1126.csv  ->  2025-01-16  M2\n",
-      "picopatt_montpellier_boulevards_20250116_1430.csv  ->  2025-01-16  M3\n",
-      "picopatt_montpellier_boulevards_20250116_1725.csv  ->  2025-01-16  M4\n",
-      "picopatt_montpellier_ecusson_20241031_0827.csv     ->  2024-10-31  M1\n",
-      "picopatt_montpellier_ecusson_20241031_1127.csv     ->  2024-10-31  M2\n",
-      "picopatt_montpellier_ecusson_20241031_1425.csv     ->  2024-10-31  M3\n",
-      "picopatt_montpellier_ecusson_20241112_0830.csv     ->  2024-11-12  M1\n",
-      "picopatt_montpellier_ecusson_20241112_1124.csv     ->  2024-11-12  M2\n",
-      "picopatt_montpellier_ecusson_20241112_1430.csv     ->  2024-11-12  M3\n",
-      "picopatt_montpellier_ecusson_20241112_1723.csv     ->  2024-11-12  M4\n",
-      "picopatt_montpellier_ecusson_20241121_0832.csv     ->  2024-11-21  M1\n",
-      "picopatt_montpellier_ecusson_20241121_1729.csv     ->  2024-11-21  M4\n",
-      "picopatt_montpellier_ecusson_20241203_0829.csv     ->  2024-12-03  M1\n",
-      "picopatt_montpellier_ecusson_20241203_1128.csv     ->  2024-12-03  M2\n",
-      "picopatt_montpellier_ecusson_20241203_1423.csv     ->  2024-12-03  M3\n",
-      "picopatt_montpellier_ecusson_20241203_1743.csv     ->  2024-12-03  M4\n",
-      "picopatt_montpellier_ecusson_20241206_1005.csv     ->  2024-12-06  M1\n",
-      "picopatt_montpellier_ecusson_20241212_0829.csv     ->  2024-12-12  M1\n",
-      "picopatt_montpellier_ecusson_20241212_1125.csv     ->  2024-12-12  M2\n",
-      "picopatt_montpellier_ecusson_20241212_1425.csv     ->  2024-12-12  M3\n",
-      "picopatt_montpellier_ecusson_20250114_0832.csv     ->  2025-01-14  M1\n",
-      "picopatt_montpellier_ecusson_20250114_1130.csv     ->  2025-01-14  M2\n",
-      "picopatt_montpellier_ecusson_20250114_1427.csv     ->  2025-01-14  M3\n",
-      "picopatt_montpellier_ecusson_20250114_1726.csv     ->  2025-01-14  M4\n",
       "\n",
       "Chargement terminé.\n",
       "Couverture : 2024-10-29 -> 2025-01-16\n",
@@ -150,10 +77,10 @@
     }
    ],
    "source": [
-    "raw = fc.load_all(DATA_DIR)\n",
+    "raw = fc.load_all(DATA_DIR, False)\n",
     "\n",
     "# Résumé\n",
-    "print(\"\\nChargement terminé.\")\n",
+    "print(\"Chargement terminé.\")\n",
     "print(\"Couverture :\", raw['date'].min(), \"->\", raw['date'].max())\n",
     "print(\"Parcours :\", raw['track_id'].dropna().unique())\n",
     "print(\"\\nNombre de mesures par M_slot et parcours :\")\n",
