Optimisation du code

--- a/Localisation.ipynb
+++ b/Localisation.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b091735a",
    "metadata": {},
    "outputs": [],
@@ -29,16 +29,16 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "from math import radians, sin, cos, sqrt, atan2\n",
     "\n",
     "import functions as fc\n",
     "\n",
     "# Dossiers de données et de sortie\n",
-    "DATA_DIR = Path(\"outputs/clean_nozeros\")\n",
-    "OUTPUT_DIR = Path(\"./outputs\")\n",
-    "FIG_DIR = OUTPUT_DIR / \"figures\"\n",
-    "\n",
-    "fc.create_folder(OUTPUT_DIR)\n",
-    "fc.create_folder(FIG_DIR)\n",
+    "DATA_NOZERO = Path(\"outputs/clean_nozeros\")\n",
+    "FIG_FONT = Path(\"outputs/figures/fontaines\")\n",
+    "STATS_FONT = Path(\"outputs/stats/fontaines\")\n",
+    "fc.create_folder(FIG_FONT)\n",
+    "fc.create_folder(STATS_FONT)\n",
     "\n",
     "# Affichage complet des colonnes\n",
     "pd.set_option(\"display.max_columns\", 200)"
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0d592e6c",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
     }
    ],
    "source": [
-    "bd = fc.load_all(DATA_DIR, False)\n",
+    "bd = fc.load_all(DATA_NOZERO, False)\n",
     "\n",
     "# Résumé\n",
     "print(\"Chargement terminé\")\n",
@@ -84,16 +84,24 @@
     "print(\"Parcours :\", bd['track_id'].dropna().unique())\n",
     "print(\"\\nNombre de mesures par M_slot et parcours :\")\n",
     "print(\n",
-    "    bd.pivot_table(index=\"track_id\", columns=\"M_slot\", values=\"__source_file\", aggfunc=\"count\")\n",
+    "    bd.pivot_table(index=\"track_id\", columns=\"M_slot\", values=\"fichier_originaire\", aggfunc=\"count\")\n",
     "       .fillna(0)\n",
     "       .astype(int)\n",
     ")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "da0354ab",
+   "metadata": {},
+   "source": [
+    "# Localisation de fontaines"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4ddfb44",
+   "id": "601e6efc",
    "metadata": {},
    "outputs": [],
    "source": []
