Nettoyage des données et mises à jour des notebooks

--- a/NoZero.ipynb
+++ b/NoZero.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "c4ca3d9d",
    "metadata": {},
    "outputs": [
@@ -29,9 +29,9 @@
      "output_type": "stream",
      "text": [
       " Environnement prêt :\n",
-      "DATA_DIR   → /Users/akkouh/Desktop/dataproc\n",
-      " OUTPUT_DIR → /Users/akkouh/Desktop/TER-Picopatt/outputs\n",
-      " FIG_DIR    → /Users/akkouh/Desktop/TER-Picopatt/outputs/figures\n"
+      "DATA_DIR   -> /Users/akkouh/Desktop/dataproc\n",
+      " OUTPUT_DIR -> /Users/akkouh/Desktop/TER-Picopatt/outputs\n",
+      " FIG_DIR    -> /Users/akkouh/Desktop/TER-Picopatt/outputs/figures\n"
      ]
     }
    ],
@@ -55,9 +55,9 @@
     "\n",
     "# Vérification\n",
     "print(\" Environnement prêt :\")\n",
-    "print(f\"DATA_DIR   → {DATA_DIR}\")\n",
-    "print(f\" OUTPUT_DIR → {OUTPUT_DIR}\")\n",
-    "print(f\" FIG_DIR    → {FIG_DIR}\")\n",
+    "print(f\"DATA_DIR   -> {DATA_DIR}\")\n",
+    "print(f\" OUTPUT_DIR -> {OUTPUT_DIR}\")\n",
+    "print(f\" FIG_DIR    -> {FIG_DIR}\")\n",
     "\n",
     "\n",
     "pd.set_option(\"display.max_columns\", 200)"
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "68fcf180",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "fef4c819",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "id": "db5319fc",
    "metadata": {},
    "outputs": [
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "id": "2841cf9d",
    "metadata": {},
    "outputs": [],
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "id": "fa15f092",
    "metadata": {},
    "outputs": [],
@@ -852,8 +852,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a2062a67-b79f-4102-bd07-75a31dd5004d",
+   "metadata": {},
+   "source": [
+    "Ce code vise à analyser la présence de valeurs nulles dans les données météorologiques par parcours. Les variables sw_down et sw_left, présentant un taux de zéros trop élevé, sont d’abord retirées de l’analyse. \n",
+    "\n",
+    "Une fonction dédiée identifie ensuite, pour un parcours donné, l’ensemble des occurrences où les variables numériques prennent la valeur zéro. Pour chaque occurrence, le code conserve le contexte spatio-temporel (date, horodatage, fichier source et position dans le fichier), ce qui permet de localiser précisément les séquences de zéros et de distinguer des défauts capteurs ponctuels de dysfonctionnements plus structurels. \n",
+    "\n",
+    "Cette analyse constitue une étape préalable essentielle pour définir une stratégie d’imputation adaptée et garantir la qualité des séries temporelles utilisées par la suite."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "id": "cfaa4888",
    "metadata": {},
    "outputs": [
@@ -1341,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "id": "db97d844",
    "metadata": {},
    "outputs": [],
@@ -1402,8 +1414,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ac752799-5591-4e2f-8e4c-5a517809b428",
+   "metadata": {},
+   "source": [
+    "Pour un parcours donné, les intervalles de valeurs nulles consécutives dans les séries temporelles des variables numériques. Après filtrage des données sur le parcours étudié, les variables pertinentes sont sélectionnées en excluant les métadonnées et identifiants. Pour chaque fichier de mesure, les données sont ordonnées temporellement, puis les séquences continues de zéros sont détectées variable par variable. \n",
+    "\n",
+    "Seuls les intervalles dont la longueur dépasse un seuil minimal sont conservés. Pour chaque séquence, le code enregistre le contexte du défaut (fichier source, position de début et de fin dans le fichier, durée de l’intervalle et bornes temporelles). \n",
+    "\n",
+    "Cette analyse permet de distinguer des coupures courtes compatibles avec des défauts d’acquisition ponctuels de séquences plus longues révélant des dysfonctionnements capteurs persistants, et constitue une base objective pour définir les règles d’imputation ou d’exclusion des données."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "id": "cea48c1e",
    "metadata": {},
    "outputs": [],
@@ -1455,6 +1479,18 @@
     "            v[i0:i1+1] = np.nan\n",
     "\n",
     "    return pd.Series(v, index=x.index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "884946b3-538c-404c-ab5e-4c91eb5b259f",
+   "metadata": {},
+   "source": [
+    "On implémente une stratégie d’imputation ciblée des valeurs nulles pour un sous-ensemble de variables jugées exploitables (sw_up, sw_back, tair_tc2, ws, sw_right). Le principe repose sur l’identification de séquences consécutives de zéros dans chaque série temporelle. \n",
+    "\n",
+    "Lorsqu’une séquence est courte (longueur inférieure ou égale à un seuil fixé à 30 échantillons) et qu’elle est encadrée par deux valeurs numériques valides, les zéros sont remplacés par la moyenne des valeurs situées immédiatement avant et après la séquence. En revanche, si la séquence est trop longue, située en début ou en fin de fichier, ou encadrée par des valeurs manquantes, l’ensemble de la séquence est converti en valeurs manquantes. \n",
+    "\n",
+    "Cette approche permet de corriger des coupures d’acquisition ponctuelles sans reconstruire artificiellement des portions entières de série, garantissant ainsi la continuité minimale des données tout en préservant leur cohérence physique."
    ]
   },
   {
@@ -1555,6 +1591,18 @@
     "        })\n",
     "\n",
     "    return df_out, summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9eae08ea-bf15-475c-ab76-8d21ff6be79b",
+   "metadata": {},
+   "source": [
+    "Ensuite on met en oeuvre l’étape opérationnelle de nettoyage des fichiers de mesure par traitement des valeurs nulles. Pour chaque fichier, les données sont d’abord ordonnées selon l’horodatage ou l’index interne afin de préserver la cohérence temporelle. Une imputation ciblée est ensuite appliquée à un ensemble restreint de variables sélectionnées, en utilisant la règle de remplacement des séquences de zéros définie précédemment. \n",
+    "\n",
+    "Pour chaque variable, le nombre de zéros avant traitement est comptabilisé, puis les séquences de zéros sont soit remplacées par une valeur interpolée lorsque les conditions sont réunies, soit converties en valeurs manquantes lorsque la correction n’est pas jugée fiable. Le code produit en parallèle un résumé détaillé des opérations effectuées, incluant le nombre de points corrigés ou exclus et leur position dans le fichier. \n",
+    "\n",
+    "Cette traçabilité fine permet de contrôler l’impact du nettoyage sur les séries temporelles et de garantir la transparence des choix méthodologiques appliqués aux données."
    ]
   },
   {
